# ENPM661_project4

./: README.md
src/package_121355690/: CMakeLists.txt  package.xml
src/package_121355690/launch/: pick_place_demo.launch.py
src/package_121355690/src/: package_121355690.cpp
src/project4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/project4_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  panda.srdf  ros2_controllers.yaml
src/project4_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
